modules/k8s/oci-native-ingress-controller/test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
spec:
  ingressClassName: external
  rules:
    - host: change-domain
      http:
        paths:
          - backend:
              service:
                name: test
                port:
                  number: 80
            path: /
            pathType: Prefix
