modules/k8s/oci-native-ingress-controller/test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  # NodePort required: NIC on Flannel skips ClusterIP services when populating LB backends
  type: NodePort
  selector:
    app: test-backend
  ports:
  - port: 80
    targetPort: 8080
